test/users/ferguson/extern_const_error.good
extern_const_error.chpl:5: error: Could not find C variable MY_NUMBER - perhaps it is a complex macro?
