test/users/ferguson/extern_const_error.chpl
private extern const NUMBER:c_int;

extern const MY_NUMBER = NUMBER;

